--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/preset-stars": "^3.1.0",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^11.11.4",
+    "gsap": "^3.12.5",
+    "i18next": "^23.15.2",
+    "next": "14.2.14",
+    "next-i18next": "^15.3.1",
+    "next-intl": "^3.20.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
