changed website domain

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,8 +4,8 @@
       "year": "2024",
       "name": "Personal Website",
       "stack": ["Next.js", "TypeScript", "Tailwind CSS"],
-      "link": "https://kpimenov.ru",
-      "link_text": "kpimenov.ru"
+      "link": "https://kirillpimenov.ru",
+      "link_text": "kirillpimenov.ru"
     },
     {
       "year": "2024",
